--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-query": "^5.69.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
-    "next": "15.2.3",
+    "next": "^16.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
