--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.69.0",
-    "autoprefixer": "^10.4.21",
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "next": "^16.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
+    "next": "^15.5.9",
+    "next-sitemap": "^4.2.3",
+    "react": "19.2.1",
+    "react-aria-components": "^1.14.0",
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
