--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-tools": "^3.19.3",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "dicom-parser": "^1.8.21",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "^15.5.9",
@@ -29,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cornerstone-core": "^2.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
